# ur5_webots_lar

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: color_camera_info.yaml  depth_camera_info.yaml  view_robot.rviz
launch/: ur5e.launch  ur5e_joint_limited.launch  ur_controller.launch  view_ur5e.launch
models/mahler_obj/: bar_clamp.wbo
protos/: CAM_Support2.stl  RangeFinder.wbo  RobotiqArg2f140Model.proto  Table.proto
scripts/: test_controller.py  trajectory_follower.py  trajectory_follower_gripper.py  webots_camera_controller.py  webots_ur5_controller.py
tests/: roslaunch_test.xml
ur_ufba_webots/: CMakeLists.txt  package.xml
ur_ufba_webots/config/: joint_names.yaml
ur_ufba_webots/launch/: depth_to_pc.launch  ur5e.launch  ur5e_joint_limited.launch  ur_controller.launch  view_ur5e.launch
ur_ufba_webots/scripts/: joint_state_publisher.py  trajectory_follower.py  webots_ur5_controller.py
ur_ufba_webots/tests/: roslaunch_test.xml
ur_ufba_webots/urdf/: _d435.urdf.xacro  ur5e.urdf.xacro  ur5e_joint_limited_robot.urdf.xacro
ur_ufba_webots/worlds/: .ur5_robotiq_gripper2f140.wbproj
urdf/: ur5e.urdf.xacro  ur5e_joint_limited_robot.urdf.xacro
worlds/: .ur5_robotiq_gripper2f140.wbproj  ur5_robotiq_gripper2f140.wbt
